--- a/src/view/gameMode1.fxml
+++ b/src/view/gameMode1.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.paint.LinearGradient?>
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
 
 <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.GameMode1Controller">
   <columnConstraints>
@@ -24,6 +25,9 @@
          <GridPane.margin>
             <Insets top="20.0" />
          </GridPane.margin>
+         <font>
+            <Font size="16.0" />
+         </font>
       </Label>
       <GridPane fx:id="gpGameMode1" GridPane.rowIndex="1">
         <columnConstraints>
@@ -259,26 +263,28 @@
       </GridPane>
       <GridPane GridPane.rowIndex="2">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="281.0" minWidth="10.0" prefWidth="249.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="192.0" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="251.0" minWidth="10.0" prefWidth="251.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button mnemonicParsing="false" onAction="#goToResult" text="Finish" GridPane.columnIndex="1" GridPane.halignment="CENTER">
+            <Button mnemonicParsing="false" onAction="#goToResult" text="Confirm" GridPane.columnIndex="1" GridPane.halignment="CENTER">
                <GridPane.margin>
-                  <Insets right="200.0" />
+                  <Insets />
                </GridPane.margin>
                <padding>
                   <Insets bottom="5.0" left="15.0" right="15.0" top="5.0" />
                </padding>
             </Button>
-            <Button mnemonicParsing="false" onAction="#refresh" text="Refresh" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+            <Button mnemonicParsing="false" onAction="#refresh" text="Refresh" GridPane.halignment="RIGHT">
                <GridPane.margin>
-                  <Insets left="190.0" />
+                  <Insets />
                </GridPane.margin>
             </Button>
+            <Button mnemonicParsing="false" onAction="#leave" text=" Leave " GridPane.columnIndex="2" />
          </children>
       </GridPane>
    </children>
