--- a/src/view/gameModeTwo.fxml
+++ b/src/view/gameModeTwo.fxml
@@ -2,12 +2,14 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.paint.LinearGradient?>
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.shape.Circle?>
+<?import javafx.scene.text.Font?>
 
 <GridPane fx:id="gpGameModeTwo" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.GameModeTwoController">
   <columnConstraints>
@@ -16,11 +18,10 @@
   <rowConstraints>
       <RowConstraints maxHeight="336.0" minHeight="10.0" prefHeight="39.0" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="290.0" minHeight="0.0" prefHeight="279.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="82.0" minHeight="10.0" prefHeight="44.0" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="336.0" minHeight="10.0" prefHeight="41.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Button mnemonicParsing="false" onAction="#goToResult" text="Finish" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+      <Button mnemonicParsing="false" onAction="#goToResult" text="Leave" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
       <Circle fx:id="circle" centerX="10.0" centerY="80.0" layoutX="40.0" layoutY="222.0" radius="48.0" strokeType="INSIDE" GridPane.halignment="CENTER" GridPane.rowIndex="1">
          <fill>
             <LinearGradient endX="1.0" endY="1.0">
@@ -42,5 +43,10 @@
             <Insets />
          </GridPane.margin>
       </Circle>
+      <Label text="Follow the circle" GridPane.halignment="CENTER">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
    </children>
 </GridPane>
